--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -211,6 +211,37 @@
 }
 
 
+@book{antoulas_approximation_2005,
+	title = {Approximation of Large-Scale Dynamical Systems},
+	isbn = {978-0-89871-871-3},
+	url = {https://doi.org/10.1137/1.9780898718713},
+	series = {Advances in Design and Control},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Antoulas, Athanasios C.},
+	date = {2005},
+	doi = {10.1137/1.9780898718713},
+	note = {\_eprint: https://epubs.siam.org/doi/pdf/10.1137/1.9780898718713},	
+}
+
+@article{shokoohi_identification_1987,
+	title = {Identification and model reduction of time-varying discrete-time systems},
+	volume = {23},
+	issn = {0005-1098},
+	url = {https://www.sciencedirect.com/science/article/pii/000510988790080X},
+	doi = {10.1016/0005-1098(87)90080-X},
+	abstract = {Linear, discrete, time-variable systems are considered, and an important class of uniform realizations is defined. The necessary and sufficient conditions for a pulse response to be uniformly realizable are obtained. Two model reduction schemes, one via balanced realizations and the other via Hankel matrix are proposed. The latter approach can be considered as an identification algorithm for the two-dimensional pulse response sequence h(k, i). It is shown that the two approaches yield an identical reduced model which is always asymptotically stable.},
+	pages = {509--521},
+	number = {4},
+	journaltitle = {Automatica},
+	shortjournal = {Automatica},
+	author = {Shokoohi, Shahriar and Silverman, Leonard M.},
+	urldate = {2022-04-12},
+	date = {1987-07-01},
+	langid = {english},
+	keywords = {time-varying systems, Discrete time systems, identification, linear systems, stability, system-order reduction},
+	file = {Identification and model reduction of time-varying discrete-time systems  Leonard Silverman - Academia.html:/home/stephan/snap/zotero-snap/common/Zotero/storage/7KPAD4CM/Identification and model reduction of time-varying discrete-time systems  Leonard Silverman - Academia.html:text/html;Shokoohi und Silverman - 1987 - Identification and model reduction of time-varying.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/4GPVZV79/Shokoohi und Silverman - 1987 - Identification and model reduction of time-varying.pdf:application/pdf},
+}
+
 %=====================================================================================================================
 %Entries for literature review
 %=====================================================================================================================
