Also still working on thesis
First draft of the subsection on movements of causal systems, move right is not finished and move up is still missing
Some minor changes

--- a/Thesis/diagrams/systems.tex
+++ b/Thesis/diagrams/systems.tex
@@ -19,7 +19,7 @@
 \tikzset{boxsize/.initial=9mm} %Note: width=height=2*boxsize
 
 %line style for the signals
-\tikzstyle{signal} = [very thick]
+\tikzstyle{signal} = [line width=1.5pt]%[very thick]
 
 %line style for drawing connections
 \tikzset{signalflow/.style={signal,
